# HCI-Project

./: CMakeLists.txt  README.md
src/: main.cpp
src/dataextraction/baseextractor/: baseextractor.cpp  baseextractor.hpp
src/dataextraction/positionextractor/: positionextractor.cpp  positionextractor.hpp
src/datahandlers/attentiononhandler/: attentiononhandler.cpp  attentiononhandler.hpp
src/datahandlers/basehandler/: basehandler.cpp  basehandler.hpp
src/datahandlers/positionhandler/: positionhandler.cpp  positionhandler.hpp
src/fileparser/baseparser/: baseparser.cpp  baseparser.hpp
src/fileparser/jsonparser/: jsonparser.cpp  jsonparser.hpp
